# emulator-chip-8-rust

./: Cargo.toml  README.md  TEST_PLAN.md
src/: emojis.rs  main.rs
src/emu/: cpu.rs  gpu.rs  iset.rs  mem.rs  mod.rs  timer.rs
